add section adventure

--- a/index.html
+++ b/index.html
@@ -36,6 +36,27 @@
         </section>
     </header>
 
+    <main>
+        <section id="adventure">
+            <figure class="container-compass">
+                <img src="/assets/clock.png" alt="clock">
+            </figure>
+            <div class="container-text">
+                <span>Incredible experiences</span>
+
+                <h1>Adventure<br> without<br> boundaries</h1>
+                <p>Asaro creates extraordinary experiences for guests travelling on luxury yachts around the globe. We
+                    work with captains and crew of superyachts and mega yachts – together with owners’ representatives,
+                    yacht brokers and estate managers – to deliver entertainment on a previously unimagined scale.</p>
+                <p>Our unique adventures immerse you in captivating worlds of discovery and magic – creating memories
+                    that last a lifetime, and epic stories that are shared over dinner for decades.</p>
+            </div>
+            <figure class="container-image">
+                <img src="/assets/pirate.png" alt="pirate">
+            </figure>
+        </section>
+    </main>
+
     <script src="/script/script.js"></script>
 </body>
 
